2008-06-25  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs: Fix
	  bug where the repeat and shuffle mode were restored when switching
	  between two Last.fm stations (BGO #538946).

2008-06-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/Tests/QueryTests.cs: Make the query
	tests that used to pass pass again.

2008-06-25  Aaron Bockover  <abock@gnome.org>

	This commit fixes two new errors exposed due to fixes in gmcs trunk

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/PodSleuthDevice.cs: Due to 
	different assignment evaluation, type checking happens differently so
	int can't be assigned to short during zero-value initialization
	
	* src/Core/Banshee.Services/Banshee.MediaProfiles/MediaProfileManager.cs:
	Update ignore pragma for the different (more correct) warning 
	that is thrown now

2008-06-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	Patch from Sandy Armstrong and Bertrand Lorentz, fixes bug where
	notification popups were no longer showing on track change (BGO #537004).

2008-06-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Lastfm.Gui/Lastfm.Gui/AccountLoginDialog.cs:
	* src/Libraries/Lastfm.Gui/Lastfm.Gui/AccountLoginForm.cs: Patch from
	Peter de Kraker adds ability to press enter from password entry on Last.fm
	login form to save and close the dialog (BGO #536328).

2008-06-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Daap/Banshee.Daap.mdp: Reflect addins mv and
	proxy file from last commit, new error view file and refs this commit.

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapSource.cs: Set the
	ErrorView when we fail to login to a share we detected.

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapErrorView.cs: Tweak for
	trunk, subclassing from RoundedFrame and no border, and implementing
	ISourceContents.
