@@ -1,5 +1,10 @@
 2008-06-25  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
 
+	* build/m4/banshee/boo.m4: Add a disable-boo flag. If boo is not present and
+	  disable-boo is not set, configure will fail (BGO #532420).
+
+2008-06-25  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
+
 	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs: Fix
 	  bug where the repeat and shuffle mode were restored when switching
 	  between two Last.fm stations (BGO #538946).
